--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,6 @@ hora = "0.1.1"
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
 lto = true
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-mutable-globals"]
