--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-dist-bhtsne"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
     "J16N",
     "lv291 <baiunco291@proton.me>",
@@ -18,6 +18,7 @@ keywords = [
     "qdrant",
 ]
 readme = "README.md"
+homepage = "https://github.com/J16N/wasm_dist_bhtsne#readme"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
